# goit-pythonweb-hw-06

./: .env.example  README.md  config_db.py  connect.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: a4a30cf3cacf_initial_migration.py
